--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "next-session": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "validator": "^12.0.0"
+    "validator": "^12.0.0",
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^3.25.2",
+    "moment": "latest"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
