--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/hoangvvo/nextjs-mongodb-app#readme",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^3.25.2",
     "axios": "^0.19.0",
     "axioswal": "^1.0.1",
     "bcryptjs": "^2.4.3",
@@ -26,16 +28,15 @@
     "connect-mongo": "^3.0.0",
     "dotenv": "^8.2.0",
     "formidable": "^1.2.1",
+    "moment": "latest",
     "mongodb": "^3.3.0-beta2",
     "next": "^9.0.4-canary.2",
     "next-connect": "^0.5.1",
     "next-session": "^2.1.1",
+    "pubnub": "^4.27.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "validator": "^12.0.0",
-    "@zeit/next-css": "^1.0.1",
-    "antd": "^3.25.2",
-    "moment": "latest"
+    "validator": "^12.0.0"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
